# AISD_4sem

./: .gitignore  stats.xlsx
lab1_var1/: BinarySearchTree.cpp  BinarySearchTree.h  Stats.cpp  Task.cpp  Tasks.cpp  lab1_var1.cpp  lab1_var1.sln  lab1_var1.vcxproj  lab1_var1.vcxproj.filters  stats.xlsx
lab2_var1/: HashTable.cpp  HashTable.h  lab2_var1.sln  lab2_var1.vcxproj  lab2_var1.vcxproj.filters
lab2_var16/: CMakeLists.txt
lab2_var16/include/HashTable/: HashTable.h
lab2_var16/src/: HashTable.cpp
lab2_var16/tests/: HashTable_tests.cpp
lab3_var16/: CMakeLists.txt
lab3_var16/include/Graph/: Graph.h
lab3_var16/src/: Graph.cpp
lab3_var16/tests/: Graph_tests.cpp
